<layout>
  <data>
    <variable
        name="addTasksToPlanEvents"
        type="pg.autyzm.friendly_plans.manager_app.view.plan_create_add_tasks.AddTasksToPlanEvents"/>
  </data>
  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:id="@+id/id_nav_bar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:weightSum="1">

      <TextView
        android:id="@+id/id_tv_add_tasks_to_plan_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.00"
        android:background="#cccccc"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

      <Button
        android:id="@+id/id_btn_add_tasks_to_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="@{addTasksToPlanEvents::eventDoneAddingTasksToPlan}"
        android:text="@string/done"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_create_plan_add_tasks"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_alignParentEnd="true"
      android:layout_below="@+id/id_nav_bar"
      android:scrollbars="vertical"
      tools:listitem="@layout/item_task">
    </androidx.recyclerview.widget.RecyclerView>

  </RelativeLayout>
</layout>