<resources>
  <string name="app_name">Friendly-plans</string>
  <string name="child_app_name">Child-plans</string>
  <string name="basic_info">Informacje podstawowe</string>
  <string name="steps">Zadanie szczegółowe</string>
  <string name="save">Zapisz</string>
  <string name="save_and_finish">Zapisz i zakończ</string>
  <string name="task_create_description">Krok 1: Wpisz nazwę elementu, czas trwania, wybierz obraz i dźwięk</string>
  <string name="task_name">Nazwa:</string>
  <string name="tasks_picture">Obraz:</string>
  <string name="steps_picture">Obraz:</string>
  <string name="clear_picture">Wyczyść obraz</string>
  <string name="task_picture">Obraz</string>
  <string name="picture">Obraz:</string>
  <string name="task_sound">Dźwięk:</string>
  <string name="sound">Dźwięk:</string>
  <string name="clear_sound">Wyczyść dźwięk</string>
  <string name="select_picture">Wybierz obraz</string>
  <string name="select_sound">Wybierz skrypt</string>
  <string name="listen_sound">Odsłuchaj</string>
  <string name="duration_time">Czas trwania:</string>
  <string name="task">Zadanie</string>
  <string name="tasks_list">Zadania</string>
  <string name="prize">Nagroda</string>
  <string name="interaction">Interakcja</string>
  <string name="prizes">Nagrody</string>
  <string name="interactions">Interakcje</string>
  <string name="type">Typ:</string>
  <string name="next">Dalej</string>
  <string name="main_create_task">Stwórz element planu</string>
  <string name="step_name">Nazwa podzadania:</string>
  <string name="main_list_of_plans_edit_plan">Edytuj plany</string>
  <string name="main_list_of_tasks_edit_task">Edytuj elementy planu</string>
  <string name="main_active_child_settings">Ustawienia profilu dziecka</string>
  <string name="main_add_remove_child">Dodaj/wybierz aktywny profil dziecka</string>
  <string name="main_change_active_child">Change Active Child</string>
  <string name="main_create_plan">Stwórz plan</string>
  <string name="main_activate_plan">Aktywuj plan</string>
  <string name="plan_create_description">Krok 1: Wpisz nazwę planu</string>
  <string name="plan_name">Nazwa planu:</string>
  <string name="name">Nazwa</string>
  <string name="done">Zapisz</string>
  <string name="plan_saved_message">Plan został zapisany</string>
  <string name="plan_removed_message">Plan został usunięty</string>
  <string name="tasks">Zadania</string>
  <string name="break_time_tasks">Break time tasks</string>
  <string name="task_saved_message">Element został zapisany</string>
  <string name="task_removed_message">Element został usunięty</string>
  <string name="task_removal_confirmation_negative_button">Nie</string>
  <string name="task_removal_confirmation_positive_button">Tak, usuń element</string>
  <string name="task_removal_confirmation_title">Potwierdzenie usunięcia elementu planu</string>
  <string name="task_removal_confirmation_message">Czy jesteś pewien, że chcesz usunąć ten elemnt?</string>
  <string name="plan_removal_confirmation_negative_button">Nie</string>
  <string name="plan_removal_confirmation_positive_button">Tak, usuń plan</string>
  <string name="plan_removal_confirmation_title">Potwierdzenie usunięcia planu</string>
  <string name="plan_removal_confirmation_message">Czy jesteś pewien, że chcesz usunąć ten plan?</string>
  <string name="child_removal_confirmation_negative_button">Nie</string>
  <string name="child_removal_confirmation_positive_button">Tak, usuń profil dziecka</string>
  <string name="child_removal_confirmation_title">Potwierdzenie usunięcia profilu dziecka</string>
  <string name="child_removal_confirmation_message">Czy jesteś pewien, że chcesz usunąć wybrany profil dziecka?</string>
  <string name="step_removal_confirmation_negative_button">Nie</string>
  <string name="step_removal_confirmation_positive_button">Tak, usuń składową zadania</string>
  <string name="step_removal_confirmation_title">Potwierdzenie usunięcia składowej zadania</string>
  <string name="step_removal_confirmation_message">Czy jesteś pewien, że chcesz usunąć składową zadania?</string>
  <string name="task_cannot_be_removed">Element nie może zostać usunięty</string>
  <string name="task_cannot_be_removed_message">Elemnt nie może zostać usunięty, ponieważ jest przypisany do planu: </string>
  <string name="task_cannot_be_removed_dialog_close_button">Zamknij</string>
  <string name="task_with_steps_saved_message">Zadanie szczególowe zapisane</string>
  <string name="step_removed_message">Składowa zadania została usunięta</string>
  <string name="step_saved_message">Składowa zadania została zapisana</string>
  <string name="steps_reordered_message">Kolejność elementów została zapisana</string>
  <string name="task_reordered_message">Kolejność elementów została zapisana</string>
  <string name ="search">Wyszukaj</string>
  <string name="create_plan_tasks_list_info_type_1">Krok 2.1: Dodaj zadania i ustaw je w odpowiedniej kolejności</string>
  <string name="create_plan_tasks_list_info_type_2">Krok 2.1: Dodaj nagrody i ustaw je w odpowiedniej kolejności</string>
  <string name="create_plan_tasks_list_info_type_3">Krok 2.1: Dodaj interakcje i ustaw je w odpowiedniej kolejności</string>
  <string name="create_plan_add_tasks_type_1">Dodaj zadania</string>
  <string name="create_plan_add_tasks_type_2">Dodaj nagrody</string>
  <string name="create_plan_add_tasks_type_3">Dodaj interakcje</string>
  <string name="create_plan_add_tasks">Dodaj zadania</string>
  <string name="create_plan_add_prizes">Dodaj tablicę wyboru nagród</string>
  <string name="create_plan_add_interactions">Dodaj interakcje w planie dnia</string>
  <string name="create_plan_add_tasks_info_type_1">Krok 2.2: Wybierz zadania, które chcesz dodać do planu</string>
  <string name="create_plan_add_tasks_info_type_2">Krok 2.2: Wybierz nagrody, które chcesz dodać do planu</string>
  <string name="create_plan_add_tasks_info_type_3">Krok 2.2: Wybierz interakcje, które chcesz dodać do planu</string>
  <string name="child_settings_select_plan">Wybierz plany przypisane do profilu</string>
  <string name="child_settings_change">Zmień ustawienia profilu</string>
  <string name="child_settings_alert">Nie został wybrany aktywny profil dziecka</string>
  <string name="child_settings_alert_choose_profile">Aktywuj profil</string>
  <string name="child_name">Imię:</string>
  <string name="child_surname">Nazwisko:</string>
  <string name="font_size">Rozmiar czcionki:</string>
  <string name="task_mode">Tryb wyświetlania zadań:</string>
  <string name="step_mode">Tryb wyświetlania składowych zadań:</string>
  <string name="timer_sound">Dźwięk timera:</string>
  <string name="big">Duży</string>
  <string name="medium">Średni</string>
  <string name="small">Mały</string>
  <string name="list">Lista</string>
  <string name="slide">Slajdy</string>
  <string name="select">Wybierz</string>
  <string name="select_active_child_button">Wybierz</string>
  <string name="child_list_description">Dodaj nowy profil, usuń istniejący lub aktywuj profil wybrany z listy</string>
  <string name="child_first_name">Imię:</string>
  <string name="child_last_name">Nazwisko:</string>
  <string name="child_saved_message">Profil dziecka został zapisany</string>
  <string name="child_removed_message">Profil dziecka został usunięty</string>
  <string name="storage_permission_granted">Permission granted. You can now select the file</string>
  <string name="storage_permission_denied">Permission denied. You can\'t add files from storage</string>
  <string name="activate_plan">Aktywuj plan</string>
  <string name="activate_plan_description">Wybierz plan, który chcesz aktywować dla dziecka:</string>

  <!--Validation messages-->
  <string name="only_letters_msg">Dozwolone wyłącznie litery i cyfry</string>
  <string name="name_exist_msg">Nazwa już istnieje</string>
  <string name="only_numbers_msg">Dozwolone wyłącznie liczby</string>
  <string name="not_empty_msg">Pole nie może być puste</string>
  <!-- Error messages -->
  <string name="picking_file_error">During making safe copy of file an error occurred. Ensure that on device drive is enough space.</string>
  <string name="playing_file_error">Can not play sound. Error occurred</string>
  <string name="no_file_to_play_error">No file to play. Please, select sound</string>
  <string name="create_step">Dodaj składową</string>
  <string name="steps_list_info">Krok 2.1: Stwórz składowe zadania i ustaw je w odpowiedniej kolejności</string>
  <string name="create_step_description">Krok 2.2: Stwórz nową składową zadania</string>
  <string name="save_task_error_message">An error occurred during saving the task.</string>
  <string name="save_step_error_message">An error occurred during saving the step.</string>
  <string name="save_child_error_message">An error occurred during saving the child.</string>
  <string name="save_plan_error_message">An error occurred during saving the plan.</string>

  <!--Child app-->
  <string name="tasks_finished_message">Gratulacje, wszystkie zadania zostały ukończone!</string>
  <string name="plan_not_chosen_message">Nie wykryto aktywnego planu. Przejdź do aplikacji Przyjazny Plan Ustawienia i upewnij się, że któryś z planów został wybrany."</string>

</resources>
