<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:screenOrientation="landscape">

  <FrameLayout
    android:id="@+id/plan_menu"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"/>

  <FrameLayout
    android:id="@+id/plan_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>

</LinearLayout>