<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
  <data>
    <variable
      name="planData"
      type="pg.autyzm.friendly_plans.manager_app.view.plan_create.PlanCreateData" />
    <variable
      name="planDataClick"
      type="pg.autyzm.friendly_plans.manager_app.view.plan_create.PlanCreateActivityEvents" />
  </data>
  <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_layout_plan_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawHorizontalTrack="false"
    tools:context=".view.plan_create.PlanCreateFragment">

    <GridLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="5dp"
      android:alignmentMode="alignBounds"
      android:columnCount="5"
      android:orientation="vertical"
      android:stretchMode="columnWidth">

      <TextView
        android:id="@+id/id_plan_create_description"
        android:layout_columnSpan="5"
        android:background="#cccccc"
        android:text="@string/plan_create_description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

      <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:stretchColumns="1">

      <!-- Page title -->

        <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent">

          <TextView
            android:id="@+id/id_tv_plan_name_label"
            android:layout_column="0"
            android:text="@string/plan_name" />

          <!--Plan name -->
          <EditText
            android:id="@+id/id_et_plan_name"
            android:layout_column="1"
            android:cursorVisible="true"
            android:inputType="text"
            android:minWidth="200dp"
            android:text="@={planData.planName}"
            tools:text="This is plan name." />
        </TableRow>
      </TableLayout>

      <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/id_layout_plan_add_elements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:orientation="vertical">

        <Button
          android:id="@+id/id_btn_plan_create_tasks"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="@{() -> planDataClick.savePlanData(planData, 1)}"
          android:text="@string/create_plan_add_tasks" />
        <Button
          android:id="@+id/id_btn_plan_create_prizes"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="@{() -> planDataClick.savePlanData(planData, 2)}"
          android:text="@string/create_plan_add_prizes" />
        <Button
          android:id="@+id/id_btn_plan_create_interactions"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:onClick="@{() -> planDataClick.savePlanData(planData, 3)}"
          android:text="@string/create_plan_add_interactions" />
      </LinearLayout>

    </GridLayout>

  </ScrollView>
</layout>