<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/id_layout_plan_menu"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <Button
    android:id="@+id/id_navigation_plan_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="false"
    android:text="@string/name" />

  <Button
    android:id="@+id/id_navigation_plan_tasks"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:enabled="false"
    android:clickable="false"
    android:text="@string/tasks" />

  <Button
    android:id="@+id/id_navigation_plan_prizes"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:enabled="false"
    android:clickable="false"
    android:text="@string/prizes" />

  <Button
    android:id="@+id/id_navigation_plan_interactions"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:enabled="false"
    android:clickable="false"
    android:text="@string/interactions" />

</LinearLayout>